# thermocouple

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  README.tpl  rustfmt.toml
benches/: bench.rs
examples/: j_type.rs  k_type.rs
nist/: all.tab  commands.lisp  type_b.tab  type_e.tab  type_e.tab.rs  type_j.tab  type_j.tab.rs  type_k.tab  type_k.tab.rs  type_n.tab  type_n.tab.rs  type_r.tab  type_r.tab.rs  type_s.tab  type_s.tab.rs  type_t.tab  type_t.tab.rs
src/: b_type.rs  e_type.rs  j_type.rs  k_type.rs  lib.rs  n_type.rs  polyval.rs  r_type.rs  s_type.rs  t_type.rs  test_utils.rs  units.rs
